[tool.poetry]
name = "webhook-multiplexer"
version = "0.1.0"
description = ""
authors = ["Kashif Iftikhar <kashif@compulife.com.pk>"]
readme = "README.md"
packages = [{include = "webhook_multiplexer"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
uvicorn = "^0.22.0"


[tool.poetry.group.prod.dependencies]
greenlet = "^2.0.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
